--- a/IBM/index.html
+++ b/IBM/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aqua Health Alliance</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="IBM/styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="img/logo.png" alt="Sanitation and Water for All Logo">
+                <img src="IBM/img/logo.png" alt="Sanitation and Water for All Logo">
             </div>
             <nav>
                 <ul>
@@ -136,12 +136,12 @@
                 <p>In a remote village with a population of 500, access to clean water was a daily struggle. Villagers relied on a distant, contaminated river, leading to frequent illnesses and significant time spent fetching water. Through a partnership with AquaHealthAlliance, a deep well and solar-powered filtration system were installed. This project dramatically reduced waterborne diseases by 80%, improved hygiene, and allowed women and children to pursue education and economic activities. The newfound access to clean water empowered the community, boosted productivity, and enhanced overall quality of life.</p>
             </div>
             <div class="img-col">
-                <img src="img/village.png" class="left">
+                <img src="IBM/img/village.png" class="left">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="img/wash.png" class="right">
+                <img src="IBM/img/wash.png" class="right">
             </div>
             <div class="text-col">
                 <h2 class="sub-head">Health and Hygiene: A Community Transformation</h2>
@@ -156,12 +156,12 @@
                 <p>In a recent initiative byAquaHealthAlliance, severalschools have been equipped withclean water sources and modernsanitation facilities. This hasled to a significant decrease inwaterborne illnesses amongstudents and has improvedattendance rates. Girls, inparticular, benefit from theseprograms as they no longer missschool during menstruation dueto lack of facilities.</p>
             </div>
             <div class="img-col">
-                <img src="img/school.png" class="left">
+                <img src="IBM/img/school.png" class="left">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="img/tower.png" class="right">
+                <img src="IBM/img/tower.png" class="right">
             </div>
             <div class="text-col">
                 <h2 class="sub-head">Empowering Women through Access to Water</h2>
@@ -175,7 +175,7 @@
 
     <div class="footer">
         <div class="logo">
-            <img src="img/logo 1.png" alt="AquaHealthAlliance">
+            <img src="IBM/img/logo 1.png" alt="AquaHealthAlliance">
         </div>
         <div class="links">
             <h3>LINKS</h3>
